# asext

./: .gitignore  404.html  LICENSE.md  README.md  _asext.code-workspace  index.html  mkdocs.yml  myst.yml  objects.inv  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: TODO_to_Issues.yml  build_wheel.yml  build_wheel_n_upload_PyPi.yaml  build_wheel_n_upload_PyPi.yml  build_wheel_n_upload_pypi.yml  mkdocs_buildnDeploy_ghpage.yml  mkdocs_deploy_ghpage.yaml  myst_buildnDeploy_ghpage.yaml  pkg_buildWheel_n_uploadPypi.yml  pub_build_wheel_n_upload_pypi.yml  pytest_pip.yml  upload_pypi_dependent.yml
1_scripts/: fetch_js.py  py_copy_config_schema.py
1devtool/0_ASE/: ase0_type_of_simulation.ipynb  ase1_atoms.ipynb  ase1_traj_extxyz.ipynb  ase1_visualize.ipynb  ase2_Lammps.ipynb  ase_calculators.ipynb  test.lmpdata
1devtool/0_ASE/issue_report/: ase_issue.ipynb  test.lmpdata
1devtool/0_ASE/test_file/: CH4.data  MoSe2.extxyz  Mo_conf_label.extxyz  Mo_conf_label_test.extxyz  POSCAR  calc.txt  ch4.dump  ch4.traj  conf.lmpdata  conf2.lmpdata  conf_ase.traj  conf_back.lmpdata  conf_labeled.lmpdata  lammps_data_pymatgen.lmpdata  struct_test.lmpdump
1devtool/0_ASE/test_file/extxyz/: conf_changekeys.extxyz  conf_keys_custom.extxyz  conf_keys_internal.extxyz  conf_labeled_back.extxyz  conf_labeled_lessSym.extxyz
1devtool/dev_asext/: dev_lmpdata.ipynb  find_primitive.ipynb
1devtool/dev_asext/testfile/: ch4.dump  ch4_ase_write.data  ch4_from_dump.extxyz  ch4_test.data  ch4_thang_write.data
1thang_js/: page_logVisitor.js
_docs/: api.md  build_doc_local.sh  cell.md  conf.py  config.md  index.md  io.md  jobman.md  myst.yml  path.md  pkg.md  requirement.txt  stuff.md
_docs/1_scripts/: fetch_js.py  py_copy_config_schema.py
_docs/_extra_theme/css/: all.css  myst_extend.css  sphinx_api_style.css
_docs/api/: api.md  api_io.md  api_struct.md
_docs/apidocs/: index.rst
_docs/apidocs/asext/: asext._version.md  asext.cell.md  asext.io.md  asext.io.readwrite.md  asext.md  asext.struct.md
_docs/schema_doc/: config_remotes.md
_docs/sphinx_api/: api.md  conf.py
_docs/sphinx_doc/: conf.py  index.md
_docs/sphinx_doc/_summary/: asext.cell.rst  asext.io.readwrite.rst  asext.io.rst  asext.rst  asext.struct.rst
api/: index.html
api/api/: index.html
api/api_cell/: index.html
api/api_io/: index.html
api/api_struct/: index.html
asext/: __init__.py  _version.py  ase_cell.py  ase_struct.py  calculator.py  cell.py  io.py  struct.py
asext.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
asext/io/: __init__.py  lmpdata.py  readwrite.py
blog/: index.html
cell/: index.html
io/: index.html
schema_doc/config_remotes/: index.html
search/: search_index.json
struct/: index.html
test/: test_ase_cell.py  test_ase_struct.py
