[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "asext"
dynamic = ["version"]
description = "Python package extends functions of ASE (Atomic Simulation Environment)"
authors = [{ name = "C.Thang Nguyen", email = "sth@sth.com" }]
license = { file = "LICENSE.md" }
classifiers = [
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    'Topic :: Scientific/Engineering :: Physics'
]

requires-python = '>=3.10'
dependencies = ['ase', 'numpy']

[project.optional-dependencies]
bare = []
test = ['pytest', 'pytest-cov', 'numpy']

[project.urls]
Homepage = "https://thangckt.github.io/asext_doc"

[tool.setuptools_scm]
write_to = "asext/_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
fallback_version = "0.1.0"

[tool.setuptools.packages.find]
include = ["asext*"]
exclude = ["1devtool*", "_docs*"]


[tool.setuptools.package-data]
# asext = ['_cookie_file/*']
